Remove _module-installer pattern for declarative directory creation
- Delete src/_module-installer folder (security risk: arbitrary code execution)
- Remove chalk, fs-extra from dependencies (other deps kept for CLI tools)
- Update eslint.config.mjs to remove _module-installer CommonJS overrides
- Update module.yaml with directories key using variable references

--- a/src/module.yaml
+++ b/src/module.yaml
@@ -94,3 +94,7 @@ trace_output:
   prompt: "Where should traceability reports be stored?"
   default: "traceability"
   result: "{test_artifacts}/{value}"
+
+# Directories to create during installation (declarative, no code execution)
+directories:
+  - "{test_artifacts}"
