--- a/src/workflows/testarch/ci/workflow.yaml
+++ b/src/workflows/testarch/ci/workflow.yaml
@@ -19,11 +19,13 @@ validation: "{installed_path}/checklist.md"
 
 # Variables and inputs
 variables:
-  ci_platform: "auto" # auto, github-actions, gitlab-ci, circle-ci, jenkins - user can override
+  ci_platform: "auto" # auto, github-actions, gitlab-ci, circle-ci, jenkins, azure-devops, harness - user can override
   test_dir: "{project-root}/tests" # Root test directory
+  test_stack_type: "auto" # auto, frontend, backend, fullstack - detected or user override
+  test_framework: "auto" # auto, playwright, cypress, jest, vitest - detected or user override
 
-# Output configuration
-default_output_file: "{project-root}/.github/workflows/test.yml" # GitHub Actions default
+# Output configuration (resolved dynamically based on ci_platform detection)
+default_output_file: "{project-root}/.github/workflows/test.yml" # GitHub Actions default; overridden per platform
 
 # Required tools
 required_tools:
