--- a/src/module.yaml
+++ b/src/module.yaml
@@ -13,7 +13,7 @@ default_selected: false
 ## project_root
 
 # TEA-specific configuration variables
-# IMPORTANT: Only tea_use_playwright_utils and tea_browser_automation are ACTIVELY USED in workflows
+# IMPORTANT: tea_use_playwright_utils, tea_browser_automation, test_stack_type, ci_platform, and test_framework are ACTIVELY USED in workflows
 # Other variables are FUTURE placeholders for Phase 10 enhancements
 
 test_artifacts:
@@ -50,16 +50,70 @@ tea_browser_automation:
     - value: "none"
       label: "None - No live browser interaction"
 
-# ⏭️ FUTURE - Test framework selection (not currently wired into workflows, marked for Phase 10)
-test_framework:
-  prompt: "Which test framework are you using?"
-  default: "playwright"
+# ✅ ACTIVELY USED - Stack type detection for multi-framework support
+test_stack_type:
+  prompt: "What type of project is this?"
+  default: "auto"
   result: "{value}"
   single-select:
+    - value: "auto"
+      label: "Auto-detect from project files (Recommended)"
+    - value: "frontend"
+      label: "Frontend (Node.js, React, Vue, Angular)"
+    - value: "backend"
+      label: "Backend (Python, Java, Go, .NET, Rust)"
+    - value: "fullstack"
+      label: "Full-stack (both frontend and backend)"
+
+# ✅ ACTIVELY USED - CI/CD platform detection
+ci_platform:
+  prompt: "Which CI/CD platform do you use?"
+  default: "auto"
+  result: "{value}"
+  single-select:
+    - value: "auto"
+      label: "Auto-detect from repository (Recommended)"
+    - value: "github-actions"
+      label: "GitHub Actions"
+    - value: "gitlab-ci"
+      label: "GitLab CI"
+    - value: "jenkins"
+      label: "Jenkins"
+    - value: "azure-devops"
+      label: "Azure DevOps Pipelines"
+    - value: "harness"
+      label: "Harness CI"
+    - value: "circle-ci"
+      label: "CircleCI"
+    - value: "other"
+      label: "Other/Custom"
+
+# ✅ ACTIVELY USED - Test framework selection for multi-stack support
+test_framework:
+  prompt: "Which test framework are you using?"
+  default: "auto"
+  result: "{value}"
+  single-select:
+    - value: "auto"
+      label: "Auto-detect from project files (Recommended)"
     - value: "playwright"
-      label: "Playwright (Recommended)"
+      label: "Playwright (JavaScript/TypeScript)"
     - value: "cypress"
-      label: "Cypress"
+      label: "Cypress (JavaScript/TypeScript)"
+    - value: "jest"
+      label: "Jest (JavaScript/TypeScript)"
+    - value: "vitest"
+      label: "Vitest (JavaScript/TypeScript)"
+    - value: "pytest"
+      label: "pytest (Python)"
+    - value: "junit"
+      label: "JUnit (Java/Kotlin)"
+    - value: "go-test"
+      label: "Go test (Go)"
+    - value: "dotnet-test"
+      label: "dotnet test (C#/.NET)"
+    - value: "rspec"
+      label: "RSpec (Ruby)"
     - value: "other"
       label: "Other/Custom"
 
@@ -96,6 +150,25 @@ trace_output:
   result: "{test_artifacts}/{value}"
 
 post-install-notes:
+  test_stack_type:
+    auto: |
+      Stack Auto-Detection:
+        TEA will detect your project type from manifest files:
+        - Frontend: package.json with react/vue/angular, playwright.config.*, vite.config.*
+        - Backend: pyproject.toml, pom.xml, go.mod, *.csproj, Gemfile, Cargo.toml
+        - Full-stack: both frontend and backend indicators present
+        Existing installations without test_stack_type default to "auto" (detects frontend).
+  ci_platform:
+    auto: |
+      CI Platform Auto-Detection:
+        TEA will detect your CI platform from repository files:
+        - GitHub Actions: .github/workflows/
+        - GitLab CI: .gitlab-ci.yml
+        - Jenkins: Jenkinsfile
+        - Azure DevOps: azure-pipelines.yml
+        - Harness: .harness/
+        - CircleCI: .circleci/config.yml
+        Existing installations without ci_platform default to "auto".
   tea_browser_automation:
     cli: |
       Playwright CLI Setup:
