--- a/src/workflows/testarch/framework/workflow.yaml
+++ b/src/workflows/testarch/framework/workflow.yaml
@@ -1,5 +1,6 @@
 # Test Architect workflow: framework
 name: testarch-framework
+# prettier-ignore
 description: 'Initialize test framework with Playwright or Cypress. Use when the user says "lets setup test framework" or "I want to initialize testing framework"'
 
 # Critical variables from config
