--- a/src/workflows/testarch/nfr-assess/workflow.yaml
+++ b/src/workflows/testarch/nfr-assess/workflow.yaml
@@ -1,5 +1,6 @@
 # Test Architect workflow: nfr-assess
 name: testarch-nfr
+# prettier-ignore
 description: 'Assess NFRs like performance security and reliability. Use when the user says "lets assess NFRs" or "I want to evaluate non-functional requirements"'
 
 # Critical variables from config
