--- a/src/workflows/testarch/atdd/workflow.yaml
+++ b/src/workflows/testarch/atdd/workflow.yaml
@@ -1,5 +1,6 @@
 # Test Architect workflow: atdd
 name: testarch-atdd
+# prettier-ignore
 description: 'Generate failing acceptance tests using TDD cycle. Use when the user says "lets write acceptance tests" or "I want to do ATDD"'
 
 # Critical variables from config
