--- a/src/workflows/testarch/test-design/workflow.yaml
+++ b/src/workflows/testarch/test-design/workflow.yaml
@@ -1,5 +1,6 @@
 # Test Architect workflow: test-design
 name: testarch-test-design
+# prettier-ignore
 description: 'Create system-level or epic-level test plans. Use when the user says "lets design test plan" or "I want to create test strategy"'
 
 # Critical variables from config
