--- a/src/workflows/testarch/test-review/workflow.yaml
+++ b/src/workflows/testarch/test-review/workflow.yaml
@@ -1,5 +1,6 @@
 # Test Architect workflow: test-review
 name: testarch-test-review
+# prettier-ignore
 description: 'Review test quality using best practices validation. Use when the user says "lets review tests" or "I want to evaluate test quality"'
 
 # Critical variables from config
@@ -45,4 +46,3 @@ execution_hints:
   interactive: false # Minimize prompts
   autonomous: true # Proceed without user input unless blocked
   iterative: true # Can review multiple files
-
